--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "components": "^0.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "styled": "^1.0.0",
     "styled-components": "^6.1.14"
   },
